fix overflow issue with home module section

--- a/src/components/ui-components/modules/MediaDashboard/styles.module.css
+++ b/src/components/ui-components/modules/MediaDashboard/styles.module.css
@@ -22,7 +22,6 @@ body {
 }
 
 section {
-  overflow: scroll;
   max-height: 80vh;
   padding: 0 40px 0;
   margin: 20px;
